add regis route, fix docker+yaml file
