# src/controllers/user.controller.js
@@ -32,7 +32,7 @@ exports.getAll = async (req, res) => {
         if(!foundUser || foundUser.length == 0) {
             res.status(404).json({message: "User not found!"});
         } else {
-            res.status(302).json(foundUser);
+            res.status(200).json(foundUser);
         }
     } catch (e) {
         res.status(500).json({message: e.message});
@@ -48,7 +48,7 @@ exports.create = async (req, res) => {
         if(!foundUser || foundUser.length == 0) {
             const user = new UserModel({username, password, role});
             const response = await user.save();
-            res.status(201).json(response);
+            res.status(200).json({message: "user created"});
         } else {
             res.status(409).json({message: "User already exists!"});
         }
@@ -66,7 +66,7 @@ exports.read = async (req, res) => {
         if(!foundUser || foundUser.length == 0) {
             res.status(404).json({message: "User not found!"});
         } else {
-            res.status(302).json(foundUser);
+            res.status(200).json(foundUser);
         }
     } catch (e) {
         res.status(500).json({message: e.message});
@@ -76,13 +76,14 @@ exports.read = async (req, res) => {
 
 exports.update = async (req, res) => {
     const { id } = req.params;
+    const {username, password, role} = req.body;
     try {
         const foundUser = await UserModel.findOne({ _id: id });
     
         if(foundUser || foundUser.length == 0) {
-            Object.assign(foundUser, req.body);
+            Object.assign(foundUser, {username, password, role});
             await foundUser.save();
-            res.status(301).json(foundUser);
+            res.status(200).json(foundUser);
         } else {
             res.status(404).json({message: `User not found...`});
         }
