# swagger-output.json
@@ -31,6 +31,42 @@
         }
       }
     },
+    "/users/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/users/login": {
       "post": {
         "description": "",
@@ -72,8 +108,8 @@
         "description": "",
         "parameters": [],
         "responses": {
-          "302": {
-            "description": "Found"
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
@@ -106,8 +142,8 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "409": {
             "description": "Conflict"
@@ -130,8 +166,8 @@
           }
         ],
         "responses": {
-          "302": {
-            "description": "Found"
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
@@ -149,11 +185,29 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "301": {
-            "description": "Moved Permanently"
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
